Clean up markdown formatting

--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -187,7 +187,7 @@ The authors would like to thank the following persons and institutions. The Gett
 
 [^11]: Board of Studies Meeting Minutes, November 10, 1998. Conservation and Technology Department Archive, Courtauld Institute of Art, London.
 
-[^12]: University of London: Courtauld Institute of Art, 1998. *1997/98* *Annual Report*, 18–19.
+[^12]: University of London: Courtauld Institute of Art, 1998. *1997/98 Annual Report*, 18–19.
 
 [^13]: David Wallace to D. Franklin, June 21, 1978, Information and Correspondence of Early Years of Diploma in the Conservation of Easel Painting Course, Conservation and Technology Department Archive, Courtauld Institute of Art, London.
 
