--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -65,7 +65,7 @@ In the 1820s, in the preparation for the opening of the museum in the rooms of P
 
 The operations described in the first two columns are obviously alternatives. In fact, in less serious cases, in place of the lining, only the *spianatura* operation would be performed. From other documents we can better understand what this “flattening” consisted of: the consolidation of the paint layers carried out by applying animal glue—the “strong glue” traditionally used for this purpose and also used for the lining—on the reverse of the canvas, without removing the painting from the stretcher, and then ironing it in this way.
 
-The application on a new stretcher, “*a* *zeppe*”—that is, with triangular wedges that allow the canvas to be put back under tension—is almost systematically proposed for lined paintings but could occasionally also be carried out for those subjected to “flattening” only[^7] (see {% cite 'Cerasuolo 2008' '28' %}).
+The application on a new stretcher, “*a zeppe*”—that is, with triangular wedges that allow the canvas to be put back under tension—is almost systematically proposed for lined paintings but could occasionally also be carried out for those subjected to “flattening” only[^7] (see {% cite 'Cerasuolo 2008' '28' %}).
 
 For example, an expense report, for the treatment of Ribera’s *Drunken Silenus*, describes the operation as follows: “flattening from the front of the painting, glue on the back, stretched onto the new frame and fully adjusted.”[^8]
 
