--- a/content/1-history/7.md
+++ b/content/1-history/7.md
@@ -101,7 +101,7 @@ Our ever-evolving understanding of the structural treatment of paintings on fabr
 
 {% backmatter %}
 
-## **Notes**
+## Note
 
 {% endbackmatter %}
 
