--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -126,13 +126,13 @@ Thanks to Jennifer Ginevra (TEFL/Cambridge educator) and Dan Butcovich Pieroni (
 
 [^4]: Both Aquazol 200 and 500 were tested.
 
-[^5]: Extra-fine rabbit skin glue produced by *Le Franc & Bourgeois* was used to face the painting layers with Japanese paper sheets (Tengujo kashmir 9 g/m^2^). The sheets fixed around the perimeter were glued to the worktop to prevent shrinkage while the glue dried. The high refining degree of this glue guarantees good elasticity and very light color, reducing the risk of color changes in a painting made with such a lean oil.
+[^5]: Extra-fine rabbit skin glue produced by *Le Franc & Bourgeois* was used to face the painting layers with Japanese paper sheets (Tengujo kashmir 9 g/<sup>2</sup>). The sheets fixed around the perimeter were glued to the worktop to prevent shrinkage while the glue dried. The high refining degree of this glue guarantees good elasticity and very light color, reducing the risk of color changes in a painting made with such a lean oil.
 
 [^6]: Florentine glue-paste adhesive is usually composed of wheat and rye flours, animal glue, water, Venetian turpentine, molasses and linseed mucilage.
 
 [^7]: 3% in water (w/v).
 
-[^8]: Trevira CS Delay, 100% polyester, 50 g/m^2^.
+[^8]: Trevira CS Delay, 100% polyester, 50 g/<sup>2</sup>.
 
 [^9]: As suggested by Leonardo Borgioli, a chemist working at CTS Europe.
 
@@ -154,8 +154,8 @@ Thanks to Jennifer Ginevra (TEFL/Cambridge educator) and Dan Butcovich Pieroni (
 
 [^18]: Plextol B500 is an aqueous dispersion of thermoplastic acrylic polymer based on methyl methacrylate and ethyl acrylate. Dispersion K360 is an aqueous dispersion of thermoplastic acrylic polymer based on 2-ethyl-hexyl-acrylate. According to technical data sheets, Plextol B500 and Dispersion K360 are miscible.
 
-[^19]: Trevira CS (Lipari), 100% polyester, 260 g/m^2^. The amount of dry resin left on the lining canvas was calculated at about 36 g/m^2^.
+[^19]: Trevira CS (Lipari), 100% polyester, 260 g/<sup>2</sup>. The amount of dry resin left on the lining canvas was calculated at about 36 g/<sup>2</sup>.
 
 [^20]: Elastic modulus is a measure of stiffness, defining the relationship between stress and strain in a material. The elastic modulus of the original canvas is usually quite different than the modulus of the new lining canvas. In our experience of tensioning new lining canvases, we have found that new canvas (whether made of natural or synthetic fibers) is usually more elastic than the original.
 
-[^21]: TNT 84: weight 105 g/m^2^, thickness 260 μm.
+[^21]: TNT 84: weight 105 g/<sup>2</sup>, thickness 260 μm.
