--- a/content/2-present-practice/12.md
+++ b/content/2-present-practice/12.md
@@ -99,7 +99,7 @@ Given the size of the mural, the marouflage was to be carried out in four succes
 
 In preparation for lining, the worktable was covered with sheets of double reflective insulation (Reflectix) to reduce heat loss during the heating process. The temperature-controlled silicone rubber heat sheet was positioned for the adhesion of the first section at the bottom of the mural. Lastly, a coat of warm Beva 371b was applied to the face of the honeycomb panel, thus ensuring that the surfaces to be bonded were coated with a layer of the adhesive.
 
-The mural was positioned onto the honeycomb panel, sealed with Dartek film, and then transferred onto the silicone rubber heat sheet. The vacuum pumps were attached with quick-release vacuum connectors, the heat sheet was turned on, and metalized reflective Mylar was placed over the section to retain heat. Once the paint surface temperature of all areas of the section reached 65^°^C, the heat was turned off and the bonded area allowed to cool down.
+The mural was positioned onto the honeycomb panel, sealed with Dartek film, and then transferred onto the silicone rubber heat sheet. The vacuum pumps were attached with quick-release vacuum connectors, the heat sheet was turned on, and metalized reflective Mylar was placed over the section to retain heat. Once the paint surface temperature of all areas of the section reached 6<sup>°</sup>C, the heat was turned off and the bonded area allowed to cool down.
 
 Everything appeared to have gone exactly as intended, but when the reflective Mylar was pulled back, a series of small bulges not present at the beginning of the heating process had developed along the center structural join of the panel ([fig. 12.5](#fig-12-5)). The cause of the deformations was delamination of the aluminum skins. The same problem was also discovered on the reverse of the panel, raising questions about what had caused the panel failure and how to proceed. Would we continue with the process in the hope that the rest of the panel would remain intact, or should the procedure be abandoned? Because the panel was intended to support the mural over the long term, we could not in good conscience continue to adhere the mural to what was clearly a structurally compromised support.
 
@@ -119,7 +119,7 @@ It was empirically calculated that a tube with a diameter of 3.7 m would be req
 
 {% figure 'fig-12-6' %}
 
-The curved plywood form was set over the mural and tied to 5 x 10 cm framing supports on either end with block-and-tackle pulleys. This arrangement would enable the operators at the four corners to slowly roll the curved form away from the bottom edge in a controlled manner, until the entire section was released. With the interleaf and linen facing tabs along the bottom of the mural secured to the bottom edge of the curved plywood form, the silicone heat sheet was turned on and the surface temperature of the aluminum honeycomb panel raised to 65^°^C.
+The curved plywood form was set over the mural and tied to 5 x 10 cm framing supports on either end with block-and-tackle pulleys. This arrangement would enable the operators at the four corners to slowly roll the curved form away from the bottom edge in a controlled manner, until the entire section was released. With the interleaf and linen facing tabs along the bottom of the mural secured to the bottom edge of the curved plywood form, the silicone heat sheet was turned on and the surface temperature of the aluminum honeycomb panel raised to 6<sup>°</sup>C.
 
 As the Beva 371b began to release, the bottom edge of the curved panel form was slowly raised while the other end was lowered, enabling the mural to be gently pulled away from the honeycomb panel ([fig. 12.7](#fig-12-7)). This went according to plan; however, cool air flowing between the surface of the panel and the underside of the linen interleaf caused stringing of the Beva 371b adhesive, a well-known occurrence in the hot-melt glue industry. As the strings cooled, the resulting hardening of the adhesive impeded the effort to pull the mural off the panel at an effective pace. Severing the strings with a metal spatula as they formed enabled the procedure to continue. The total time to reverse the lining, from the moment of lifting the curved form to complete detachment, took only four minutes. Critical to the success of the reversal process was the presence of the linen interleaf, which provided much needed support for the mural and took the brunt of the applied stress.
 
@@ -127,7 +127,7 @@ As the Beva 371b began to release, the bottom edge of the curved panel form was 
 
 ## Honeycomb Panel Redesign
 
-With the mural successfully detached from the honeycomb panel, the next step in the process was to determine why the panel had delaminated. The failed panel was fabricated with aluminum skins (0.8 mm) supported with poplar strips for the outer straight edges and medium-density fiberboard (Medex) edges cut to the shape of the arch. The width of the mural, which exceeded the width of available aluminum sheets, required a vertical seam in the center of the panel, which had been reinforced with 7.6 x 1.9 cm rectangular aluminum tube. The core of the panel was filled with aluminum honeycomb to provide rigidity and heat transfer. When the panel was commissioned, it was made clear to the manufacturer that the panel would be heated to 65^°^C–70^°^C and that an epoxy adhesive able to tolerate that temperature needed to be used in the fabrication of the panel.
+With the mural successfully detached from the honeycomb panel, the next step in the process was to determine why the panel had delaminated. The failed panel was fabricated with aluminum skins (0.8 mm) supported with poplar strips for the outer straight edges and medium-density fiberboard (Medex) edges cut to the shape of the arch. The width of the mural, which exceeded the width of available aluminum sheets, required a vertical seam in the center of the panel, which had been reinforced with 7.6 x 1.9 cm rectangular aluminum tube. The core of the panel was filled with aluminum honeycomb to provide rigidity and heat transfer. When the panel was commissioned, it was made clear to the manufacturer that the panel would be heated to 6<sup>°</sup>C–7<sup>°</sup>C and that an epoxy adhesive able to tolerate that temperature needed to be used in the fabrication of the panel.
 
 After a review of the specifications and materials used to make the panel, it was determined that several factors led to its failure, including the type and amount of epoxy adhesive applied to the various surfaces and the choice of edge materials. In preparation for the fabrication of a stronger panel, the manufacturer produced numerous small mock-ups with various combinations of epoxies and edge materials. These were then heated to the lining temperature under vacuum and assessed for their structural integrity. Initially, many of these failed, but based on the results of the experiments two major changes were made to the construction of the panel. First, an epoxy adhesive that would tolerate temperatures of up to 80°C was obtained and successfully tested on mock-up panels. Second, the poplar and Medex edging materials were replaced with aluminum tube along the edges, which was also used for cross bracing. Additionally, the center vertical seam was reinforced with a 10 cm composite plate that spanned the inside of the seam; it was composed of 1.27 cm Hexcel aluminum honeycomb sandwiched between .125 cm 1/8 inch aluminum sheets. This composition greatly stiffened the structure, and the new panel was custom fabricated for the lining of the mural.
 
@@ -135,15 +135,15 @@ After a review of the specifications and materials used to make the panel, it wa
 
 The challenges encountered during reversal of the partially adhered portion of the mural led to a reconsideration of the properties of Beva 371b: namely, its high strength and the temperature needed to release it. Recently, Ploeger et al. considered the strength of Berger’s adhesive formulation and proposed the need for further research and development of adhesives with reduced strength and activation temperature ({% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}). As the entire Puvis de Chavannes marouflage may need to be reversed at some point in the future, thought was given to how conservators would go about doing this and what could be done during the present procedure to make that task less challenging. Once mounted onto its rigid support panel, the mural canvas would be in a relatively stress-free state, so such a high-strength adhesive would not be necessary. The question was how to go about reducing the strength and tack of Beva 371b while still providing sufficient adhesion. Additionally, lowering the activation temperature of the adhesive was deemed a desirable characteristic, especially for the brittle paint and ground layers.
 
-As supplied by the manufacturer, paraffin wax makes up 9% of Beva 371b. It was deduced that the addition of a low-temperature paraffin wax to the stock solution would reduce not only the activation temperature of the adhesive but also the percentage of the other resins and tackifiers in the solution, thereby reducing the adhesive’s strength. Empirical tests were performed to determine if a modified adhesive with these desirable properties could be produced. Using Beva 371b dry resin mix, batches of the adhesive were weighed out and dissolved in solvents according to the manufacturer’s directions. They were then modified by adding 5% and 10% by weight of paraffin wax. A paraffin wax with a melting temperature of 50^°^C–54.4^°^C was chosen for testing. A control sample of unmodified Beva 371b was also prepared for comparison. Scrap samples of thick nineteenth-century decorative canvas, along with linen interleaf fabrics, were adhered to small honeycomb test panels. From the tests, it was determined that it was possible to sufficiently adhere the test samples at a much lower temperature of 54.4^°^C measured at the paint surface. The tests also indicated that at the interface between the aluminum panel and linen interleaf, the temperature remained below 60^°^C
+As supplied by the manufacturer, paraffin wax makes up 9% of Beva 371b. It was deduced that the addition of a low-temperature paraffin wax to the stock solution would reduce not only the activation temperature of the adhesive but also the percentage of the other resins and tackifiers in the solution, thereby reducing the adhesive’s strength. Empirical tests were performed to determine if a modified adhesive with these desirable properties could be produced. Using Beva 371b dry resin mix, batches of the adhesive were weighed out and dissolved in solvents according to the manufacturer’s directions. They were then modified by adding 5% and 10% by weight of paraffin wax. A paraffin wax with a melting temperature of 5<sup>°</sup>C–54.<sup>°</sup>C was chosen for testing. A control sample of unmodified Beva 371b was also prepared for comparison. Scrap samples of thick nineteenth-century decorative canvas, along with linen interleaf fabrics, were adhered to small honeycomb test panels. From the tests, it was determined that it was possible to sufficiently adhere the test samples at a much lower temperature of 54.<sup>°</sup>C measured at the paint surface. The tests also indicated that at the interface between the aluminum panel and linen interleaf, the temperature remained below 6<sup>°</sup>C
 
-To determine if the adhered samples could be released with less force, small, rigid cardboard tubes were attached to one edge of the test samples and the panels heated until the surface of the paint reached 54.4^°^ C. Whereas it was not possible to roll back the unmodified Beva 371b at that temperature, the 5% and 10% samples both released from the aluminum panel, especially the latter, which could be rolled back using relatively little force ([fig. 12.8](#fig-12-8)). Based on these empirical tests, it was decided to adhere the mural with a Beva 371b solution modified with the addition of 10% paraffin by weight. Because the lead-white adhesive on the reverse of the mural acted as a barrier, there was little concern that the modified adhesive would darken the canvas because of its increased flow.
+To determine if the adhered samples could be released with less force, small, rigid cardboard tubes were attached to one edge of the test samples and the panels heated until the surface of the paint reached 54.<sup>°</sup> C. Whereas it was not possible to roll back the unmodified Beva 371b at that temperature, the 5% and 10% samples both released from the aluminum panel, especially the latter, which could be rolled back using relatively little force ([fig. 12.8](#fig-12-8)). Based on these empirical tests, it was decided to adhere the mural with a Beva 371b solution modified with the addition of 10% paraffin by weight. Because the lead-white adhesive on the reverse of the mural acted as a barrier, there was little concern that the modified adhesive would darken the canvas because of its increased flow.
 
 {% figure 'fig-12-8' %}
 
 ## Completion of the Marouflage Procedure
 
-Assured that the new, redesigned honeycomb panel would tolerate the lining process, the mounting of the mural proceeded as originally conceived. A coat of the modified Beva 371b solution was applied to the surface of the new honeycomb panel and allowed to dry. The linen and Kozo paper facings were then removed from the mural surface. As previously described, the mural assembly was wrapped in its Dartek vacuum envelope. The first section of the mural was successfully adhered to the panel using the modified Beva 371b adhesive at a paint surface temperature of 54.4^°^C. Once cooled to room temperature, the panel was temporarily lifted onto foam blocks to reposition the silicone heat sheet under the next section of the mural (see [fig. 12.4](#fig-12-4)). Section by section, the entire mural was successfully adhered using this system. The Belgian linen edges extending beyond the perimeter of the mural canvas were then wrapped around the edges and over the back of the honeycomb panel and adhered with Beva 371b using warm irons. Four heavy-duty metal right-angle brackets (two on each side) were mounted with epoxy and screws to the panel edges and back.
+Assured that the new, redesigned honeycomb panel would tolerate the lining process, the mounting of the mural proceeded as originally conceived. A coat of the modified Beva 371b solution was applied to the surface of the new honeycomb panel and allowed to dry. The linen and Kozo paper facings were then removed from the mural surface. As previously described, the mural assembly was wrapped in its Dartek vacuum envelope. The first section of the mural was successfully adhered to the panel using the modified Beva 371b adhesive at a paint surface temperature of 54.<sup>°</sup>C. Once cooled to room temperature, the panel was temporarily lifted onto foam blocks to reposition the silicone heat sheet under the next section of the mural (see [fig. 12.4](#fig-12-4)). Section by section, the entire mural was successfully adhered using this system. The Belgian linen edges extending beyond the perimeter of the mural canvas were then wrapped around the edges and over the back of the honeycomb panel and adhered with Beva 371b using warm irons. Four heavy-duty metal right-angle brackets (two on each side) were mounted with epoxy and screws to the panel edges and back.
 
 After selective filling and retouching, the mural was transported back to the staging for reinstallation. With just 3 mm of play on either side, the panel slid easily into its niche. The mural was positioned and checked for level, and the angle brackets were then screwed securely into corresponding wood blocking mounted in the niche recess (see [fig. 12.1](#fig-12-1)).
 
@@ -173,7 +173,7 @@ Dartek C-917 Film (nylon 6,6 film modified with a heat-stabilizing adhesive), TA
 
 Golden MSA Matte Varnish with UVLS (isobutyl and n-butyl methacrylate resin solution with amorphous silica matting agent and hindered amine UV light absorber and stabilizer). Golden Artist Colors, https://www.goldenpaints.com/
 
-Kozo Paper (Usu Mino, 15–16 g/m^2^) Hiromi Paper, https://hiromipaper.com/
+Kozo Paper (Usu Mino, 15–16 g/<sup>2</sup>) Hiromi Paper, https://hiromipaper.com/
 
 Lauan Plywood, Lowes, https://www.lowes.com/
 
