--- a/content/2-present-practice/14.md
+++ b/content/2-present-practice/14.md
@@ -26,7 +26,7 @@ Handling is key in the preservation of large canvas paintings. Canvases are roll
 
 Ideally, a rolled canvas should soon be restretched, but our storage houses numerous rolled paintings: sixty-seven paintings on nineteen rolls, including two ceiling paintings by Nicola Maria Rossi, *Pallas Abducts Juventus from the Arms of Venus* and *Allegory of the Human Spirit* (1730, 500 x 500 cm, GG 7665 and 7666) from the Harrach garden palace, which was bombed in World War II. They were rolled and acquired by the KHM in 1968.
 
-As early as the eighteenth century, inventories list paintings without a strainer (or stretcher)*.*[^2] Even today, twenty-nine paintings are stored unstretched and not rolled (flat), including a portrait of Philipp IV by a Spanish artist (210 x 143 cm, GG 9269). Until the 1990s these paintings had been stored for a long period piled on top of each other in a storage facility formerly used to house the KHM’s tapestry collection in Hofburg Palace. Lacking the resources to stabilize and stretch these damaged paintings properly, in the ’90s we mounted them clamped between sheets of corrugated cardboard.
+As early as the eighteenth century, inventories list paintings without a strainer (or stretcher).[^2] Even today, twenty-nine paintings are stored unstretched and not rolled (flat), including a portrait of Philipp IV by a Spanish artist (210 x 143 cm, GG 9269). Until the 1990s these paintings had been stored for a long period piled on top of each other in a storage facility formerly used to house the KHM’s tapestry collection in Hofburg Palace. Lacking the resources to stabilize and stretch these damaged paintings properly, in the ’90s we mounted them clamped between sheets of corrugated cardboard.
 
 Canvas paintings with paper facings—partial or covering the entire surface—testify to the lack of time and space for proper conservation treatments. Bonifazio Veronese’s *Raising of Lazarus* (early sixteenth century; 148 x 205.5 cm, GG 6679) has a typical mid-twentieth century facing with newsprint paper. In the mid-1980s, Philippe de Champaigne’s *Lamentation of Cain* (1656; 312 x 394 cm, GG 371)[^3] was faced with sheets of Japanese paper. However, restoration was delayed much longer than planned, and the facings—applied with an aqueous medium—may have caused damage, such as blanching of the varnishes. Often loose paint chips adhere better to the paper facing than to the support, making the paper’s removal difficult. Our efforts to remove facings and properly consolidate flaking paint layers are ongoing.[^4] This experience over time has led to a much more critical view of facings.
 
@@ -34,7 +34,7 @@ As mentioned, our collection is housed at different locations, but earlier decad
 
 {% figure 'fig-14-1' %}
 
-A significant number of lined canvas paintings suffer from infestation by *Stegobium paniceum* (biscuit beetle)*,* which primarily affects canvases lined around 1900, when a thick layer of glue paste with a high content of animal glue was used. To avoid new infestations, all objects or paintings are treated in the anoxic nitrogen chamber prior to storage. Both conservators and our building department focus on integrated pest management. We use traps to monitor insect activity, some with lights to attract insects. Since 2011, we have had one case of reinfestation in the central storage building, which we countered with tiny parasitoid wasps, *Lariophagus distinguendus,* which parasitize the beetle’s larvae, ending the infestation ({% cite 'Querner, Oberthaler, and Strolz 2019' %}).
+A significant number of lined canvas paintings suffer from infestation by *Stegobium paniceum* (biscuit beetle), which primarily affects canvases lined around 1900, when a thick layer of glue paste with a high content of animal glue was used. To avoid new infestations, all objects or paintings are treated in the anoxic nitrogen chamber prior to storage. Both conservators and our building department focus on integrated pest management. We use traps to monitor insect activity, some with lights to attract insects. Since 2011, we have had one case of reinfestation in the central storage building, which we countered with tiny parasitoid wasps, *Lariophagus distinguendus,* which parasitize the beetle’s larvae, ending the infestation ({% cite 'Querner, Oberthaler, and Strolz 2019' %}).
 
 ## Titian’s *Ecce Homo*: An Eighteenth-Century Lining—Partial Interventions Instead of Relining
 
@@ -50,7 +50,7 @@ Delaminated areas between the original and the lining canvas were reglued. We us
 
 ## Caravaggio’s *Rosary Madonna*: Changed Locations and Format Changes
 
-The nineteenth century favored using types of canvas with a finer and denser texture for lining. One example of a painting lined this way is Caravaggio’s *Rosary* *Madonna,*[^10] which also exemplifies the frequent format changes imposed over the years to adjust a painting’s size to a new location. In this case, a “revised revision” occurred a century later.
+The nineteenth century favored using types of canvas with a finer and denser texture for lining. One example of a painting lined this way is Caravaggio’s *Rosary Madonna,*[^10] which also exemplifies the frequent format changes imposed over the years to adjust a painting’s size to a new location. In this case, a “revised revision” occurred a century later.
 
 Rubens and other prominent Antwerp artists purchased Caravaggio’s *Rosary Madonna*, first documented in Antwerp’s Dominican church around 1620. In 1781, the painting was presented to Emperor Joseph II, and in 1786, it was transported to Vienna, presumably rolled ({% cite 'Prohaska and Swoboda 2010' '71' %}), during the Napoleonic Wars.[^11] It was probably relined before being installed at Belvedere Palace in the early nineteenth century. We do not know why its size was reduced by folding about 30 centimeters of the original canvas over the upper strainer edge. This strip remained unlined until 1913, when the format change was reversed.[^12]
 
