--- a/content/3-open-questions/17.md
+++ b/content/3-open-questions/17.md
@@ -84,7 +84,7 @@ Once coated with the wax-resin mixture, each mock-up painting was centered on it
 
 Scraped lining adhesive samples were collected from eighteen of the fifty surveyed paintings (including all six case study paintings), raw wax and resin ingredients, and each lining reconstruction adhesive. Technical examination was carried out in May and June 2019 at the Winterthur Museum’s Scientific Research and Analysis Laboratory (SRAL).
 
-For the first stage of analysis, samples were prepared for Fourier transform infrared spectroscopy (FTIR). The samples were flattened onto diamond cells to be analyzed with a Thermo Scientific Nicolet 6700 FTIR spectrometer. The samples were spread out as a translucent film using a stainless steel microroller, and the diamond cell placed on the platform of a Nicolet Continuμm Infrared Microscope. One or two target sites were selected on the diamond cell, and data was collected in transmission mode. Spectral resolution was set at 4 cm^-1^ for 128 scans (each scan ranged from 4000 to 650 cm^-1^). The resulting spectra were interpreted using OMNIC Series Software (version 8.0) and compared to the Infrared and Raman Users Group (IRUG) spectral database.
+For the first stage of analysis, samples were prepared for Fourier transform infrared spectroscopy (FTIR). The samples were flattened onto diamond cells to be analyzed with a Thermo Scientific Nicolet 6700 FTIR spectrometer. The samples were spread out as a translucent film using a stainless steel microroller, and the diamond cell placed on the platform of a Nicolet Continuμm Infrared Microscope. One or two target sites were selected on the diamond cell, and data was collected in transmission mode. Spectral resolution was set at 4 c<sup>-1</sup> for 128 scans (each scan ranged from 4000 to 650 c<sup>-1</sup>). The resulting spectra were interpreted using OMNIC Series Software (version 8.0) and compared to the Infrared and Raman Users Group (IRUG) spectral database.
 
 During the second stage of analysis, samples were transferred to Thermo Fisher Scientific autosampler vials to be analyzed with an Agilent Technologies 7820 gas chromatograph and Agilent 5975 Mass Selective Detector (GC/MSD). The autosampler vials were treated with 1 part Grace Alltech Meth-Prep II reagent in 2 parts benzene (≤100 µL) and warmed in a Lab-Line Multi-Blok heater at 60°C for an hour. The derivatized sample was pipetted into a vial insert and cooled to room temperature. From each vial, 1 μL of the sample was injected into the HP-5ms GC column (5% phenyl methyl siloxane; flow rate of 1.5 mL/minute; film thickness of 30 m x 250 μm x 0.25 μm). After injection of the sample, Agilent G1701EA GC/MSD ChemStation software was used with Winterthur RTLMPREP method set to the following conditions:
 
