--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -86,7 +86,7 @@ María Luisa Gómez has noted several characteristics of lining with *gacha* pas
 
 ### Case Studies
 
-For some cases of lined works, we were able to find references to the date and to the restorers who carried out the treatment, and we were even able to analyze the *gacha* adhesive present in them, such as those analyzed by María Dolores Gayo at the Museo del Prado, those in the Instituto del Patrimonio Cultural de España, and Ribera’s *Crucified* *Christ*, analyzed by Andrés Sánchez Ledesma (Arte-Lab S.L.) ({% cite 'Diputación Foral de Álava 2018' %}). Analyses of the *gacha* are complex because sometimes it is difficult to determine the exact composition. Apart from the difficulty of accessing representative samples, they are possibly not very homogeneous adhesives, and the quantities of certain additives were too small to be identified. We should also bear in mind other treatments and products applied to the paintings over the years, which may interfere in the analytical results.
+For some cases of lined works, we were able to find references to the date and to the restorers who carried out the treatment, and we were even able to analyze the *gacha* adhesive present in them, such as those analyzed by María Dolores Gayo at the Museo del Prado, those in the Instituto del Patrimonio Cultural de España, and Ribera’s *Crucified Christ*, analyzed by Andrés Sánchez Ledesma (Arte-Lab S.L.) ({% cite 'Diputación Foral de Álava 2018' %}). Analyses of the *gacha* are complex because sometimes it is difficult to determine the exact composition. Apart from the difficulty of accessing representative samples, they are possibly not very homogeneous adhesives, and the quantities of certain additives were too small to be identified. We should also bear in mind other treatments and products applied to the paintings over the years, which may interfere in the analytical results.
 
 Examples of case studies include:
 
