--- a/content/4-case-studies/23.md
+++ b/content/4-case-studies/23.md
@@ -16,7 +16,7 @@ contributor:
     affiliation: "ConText Inc."
     sort_as: "2"
 keywords:
-abstract: "*The Grand Panorama* *of a Whaling Voyage ’Round the World* is an 8 1/2 x 1,300 foot painting worked in distemper on cotton muslin that is owned by the New Bedford Whaling Museum. The primary objective of this conservation project was to stabilize the panorama to enable its safe handling and storage and static vertical display. The conservators developed protocols for physically supportive, minimally intrusive, and visually nondisruptive stabilization treatments; a means of documenting the conservation work; and a storage system for the conserved panorama. Treatment included removal of adhered Mylar, retention of select previous repairs, ordering of previously disrupted panels, local stabilization utilizing custom-dyed underlays, and when needed, bobbinet overlays."
+abstract: "*The Grand Panorama of a Whaling Voyage ’Round the World* is an 8 1/2 x 1,300 foot painting worked in distemper on cotton muslin that is owned by the New Bedford Whaling Museum. The primary objective of this conservation project was to stabilize the panorama to enable its safe handling and storage and static vertical display. The conservators developed protocols for physically supportive, minimally intrusive, and visually nondisruptive stabilization treatments; a means of documenting the conservation work; and a storage system for the conserved panorama. Treatment included removal of adhered Mylar, retention of select previous repairs, ordering of previously disrupted panels, local stabilization utilizing custom-dyed underlays, and when needed, bobbinet overlays."
 ---
 
 ## Introduction
@@ -39,7 +39,7 @@ The entire painted surface of the panorama was documented as unstable; according
 
 In 2012, the New Bedford Whaling Museum convened a team of experts to study the best museum and conservation practices in order to develop a protocol for preserving the panorama. The group visited institutions and interviewed professionals who had previous experience with similar objects. The National Endowment for the Humanities–funded project resulted in the 2013 NBWM Panorama Advisory Group Report “Preserving an American Treasure: A Proposed Treatment Protocol for Purrington & Russell’s Original Panorama Painting of a Whaling Voyage ’Round the World, 1848–1851.”
 
-The report’s treatment protocol for reducing the wrinkles in the panorama’s fabric and consolidating the painted surface was adopted for this project*.* The recommended treatment encompassed spraying the painted cloth with a gelatin-based consolidant, which was found to simultaneously reduce the extensive wrinkling and stabilize the flaking paint. The treatment also had the advantage of posing fewer ventilation concerns than the use of an acrylic consolidant such as Paraloid B72.
+The report’s treatment protocol for reducing the wrinkles in the panorama’s fabric and consolidating the painted surface was adopted for this project. The recommended treatment encompassed spraying the painted cloth with a gelatin-based consolidant, which was found to simultaneously reduce the extensive wrinkling and stabilize the flaking paint. The treatment also had the advantage of posing fewer ventilation concerns than the use of an acrylic consolidant such as Paraloid B72.
 
 No specific textile stabilization treatment protocols were recommended in the 2013 report. ConText Inc. developed a series of protocols to ensure the use of uniform treatment methods for the many different types of textile condition issues known to be present on the panorama (broken stitching, holes/loss, tears, vertical cuts, etc.). The focus of protocol development was to design physically supportive, minimally intrusive, and visually nondisruptive treatment methods.
 
