--- a/content/4-case-studies/25.md
+++ b/content/4-case-studies/25.md
@@ -193,15 +193,15 @@ In addition, thank you for the amazing experience at Olivier Nouaille’s studio
 
 [^4]: Named for the city, now called Lubumbashi.
 
-[^5]: Interview with Ange Kumbi, Congolese artist, April 4, 2019*.* Kumbi, born in Kinshasa, in 1970 was the first contemporary artist to set up a studio in Kinshasa.
+[^5]: Interview with Ange Kumbi, Congolese artist, April 4, 2019. Kumbi, born in Kinshasa, in 1970 was the first contemporary artist to set up a studio in Kinshasa.
 
 [^6]: Kumbi interview.
 
-[^7]: Kumbi interview*.*
+[^7]: Kumbi interview.
 
 [^8]: Kumbi interview.
 
-[^9]: Kumbi interview*.*
+[^9]: Kumbi interview.
 
 [^10]: H. P. Boissonnas (1894–1966) was an artist, art restorer, and photographer from Geneva.
 
