--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -40,13 +40,13 @@ Restoration practices in the various private collections are less well known. Ag
 
 In the National Gallery, we have few examples of linings dating back to the nineteenth century, even though the period is rather well known through the historical research cited. Such documentation tends to be of a more theorical (almost sterile) nature, and we are unable to match it with the technical evidence. Just a few linings from the nineteenth century, or even the earlier part of the twentieth, are preserved—a result of the general use of greater quantities of glue paste and of coarser and heavier canvases for linings, which has made them more fragile and more susceptible to changes in relative humidity and temperature ({% cite 'Mecklenburg 2007' %}; {% cite 'CESMAR7 2008' %}; {% cite 'Ciatti and Signorini 2006' %}; {% cite 'Roche 2003' %}) than the earlier linings described in some detail in later sections of this paper.
 
-One example of a painting with a nineteenth-century lining is the *Glory of Saint Ignatius* ([fig. 34.2](#fig-34-2))*,* by A. Pozzo (inventory 1426). The restoration is dated 1884 on the stretcher, the canvas is of a heavy and tightly woven, herringbone weave, and the adhesive rich in animal glue. On the canvas are marks that seem to be the result of burns from the application of hot irons. The stretcher is pine, with crossbars and keys, but it is essentially inadequate; clearly evident on the picture surface are the stretcher marks, as well as flattening of the paint. The inscriptions that accompany the restoration, on the stretcher, are grammatically incorrect, once again relegating the restorers to the “mechanical,” uneducated sphere. Another *bozzetto* for Pozzo’s tromp l’oeil dome of the church of Saint Ignazio (inventory 1425), has very similar characteristics and was also lined in 1884, so one can infer that it was carried out by the same restorer.
+One example of a painting with a nineteenth-century lining is the *Glory of Saint Ignatius* ([fig. 34.2](#fig-34-2)), by A. Pozzo (inventory 1426). The restoration is dated 1884 on the stretcher, the canvas is of a heavy and tightly woven, herringbone weave, and the adhesive rich in animal glue. On the canvas are marks that seem to be the result of burns from the application of hot irons. The stretcher is pine, with crossbars and keys, but it is essentially inadequate; clearly evident on the picture surface are the stretcher marks, as well as flattening of the paint. The inscriptions that accompany the restoration, on the stretcher, are grammatically incorrect, once again relegating the restorers to the “mechanical,” uneducated sphere. Another *bozzetto* for Pozzo’s tromp l’oeil dome of the church of Saint Ignazio (inventory 1425), has very similar characteristics and was also lined in 1884, so one can infer that it was carried out by the same restorer.
 
 {% figure 'fig-34-2' %}
 
 Many restorations coincided with the acquisition of the painting, for example, Giordano Luca’s *Ritratto di capomasteo (Cratete)* (inventory 1254), lined by Luigi Bartolucci in 1898. The stretcher may have been preserved from a previous intervention but adapted to make place for keys. The lining canvas is coarse and thick, stained, and has a large seam. It is interesting to compare this canvas to those in use by painters at the same time: the same kind of canvas was used for Horace Vernet’s *Portrait of Filippo Agricola*, painted in the 1820s and never lined.
 
-During the nineteenth century (although less than during the eighteenth century), we find evidence of a desire for minimal intervention, both in mending of tears and in strip-linings. It was also Bartolucci who carried out the 1909 strip-lining of Cavallino’s *Saint Peter and the Centurion* (inventory 1485)*,* for which (according to his report) he “consolidated the old lining,” thus wisely preserving a lining dating to the end of the eighteenth century that was still functional. Another example is Guido Reni’s *Magdalen* (inventory1437) ([fig. 34.3](#fig-34-3)), which was never lined but has a very old strip-lining, surviving at least in the upper section.[^7]
+During the nineteenth century (although less than during the eighteenth century), we find evidence of a desire for minimal intervention, both in mending of tears and in strip-linings. It was also Bartolucci who carried out the 1909 strip-lining of Cavallino’s *Saint Peter and the Centurion* (inventory 1485), for which (according to his report) he “consolidated the old lining,” thus wisely preserving a lining dating to the end of the eighteenth century that was still functional. Another example is Guido Reni’s *Magdalen* (inventory1437) ([fig. 34.3](#fig-34-3)), which was never lined but has a very old strip-lining, surviving at least in the upper section.[^7]
 
 {% figure 'fig-34-3' %}
 
@@ -114,7 +114,7 @@ To conclude our survey going back in time, the oldest dated lining in the Barber
 
 Among the paintings in our Gallery, we have many works lined with wax resin, a system that spread during the 1960s, perhaps in pursuit of an ideal of modernity. If we compare two *pendants* by Benefial, one lined with the wax-resin system (inventory 1182) ([fig. 34.7](#fig-34-7)) and the other lined with glue-paste (inventory 1183) ([fig. 34.8](#fig-34-8)), the difference demonstrates how the wax-resin system has a far greater impact on the perception of the painting. The different saturation of the colors caused the original link between the two paintings to be lost. Therefore, it is essential to consider all the effects of the conservation method used to preserve a painting.
 
-Seeking to implement a minimal structural intervention respectful of the aesthetic qualities of the works in our collection, our studio is focusing on developing thread by thread mending techniques for tears, as for Maratti’s *Portrait of* *Cardinal Barberini* (inventory 5001), as well as on a program of preventive conservation. This is also what led us to study again the ancient lining systems with glue paste, which are still effective after centuries, sustainable from an environmental point of view, and an almost unique example of a completely reversible intervention, as for instance in the *bozzetto* for the *Vision of Saint Romualdo* ([fig. 34.9](#fig-34-9)) by Sacchi (inventory 4632), which has been delined.
+Seeking to implement a minimal structural intervention respectful of the aesthetic qualities of the works in our collection, our studio is focusing on developing thread by thread mending techniques for tears, as for Maratti’s *Portrait of Cardinal Barberini* (inventory 5001), as well as on a program of preventive conservation. This is also what led us to study again the ancient lining systems with glue paste, which are still effective after centuries, sustainable from an environmental point of view, and an almost unique example of a completely reversible intervention, as for instance in the *bozzetto* for the *Vision of Saint Romualdo* ([fig. 34.9](#fig-34-9)) by Sacchi (inventory 4632), which has been delined.
 
 {% figure 'fig-34-7' %}
 
