--- a/content/6-interventions/37.md
+++ b/content/6-interventions/37.md
@@ -38,7 +38,7 @@ An innovative approach that aims to overcome this gap involves a new low-tempera
 
 The examination of paintings on canvas with prior lining treatments often involves identification of visual evidence of unwanted alterations that can be attributed to the effects of uncontrolled heat that exceeded the required or safe temperatures and were combined with equally uncontrolled and unsafe levels of humidity and wetting, all of which together caused irreversible changes in canvas and paint surface morphology. 
 
-The execution of traditional flour-paste or wax-resin linings requires elevated and sustained heat transfer. Historically, it was performed with thermally uncontrolled methods such as hot sand or water bags, flat irons, or self-heating box irons, which relied on the reliner to monitor and regulate the temperature by touch. The introduction of electric irons in the early twentieth century led to their adoption for relining treatments, and they continue to be among methods employed to the present day ({% cite 'Bomford et al. 2003' '31' %}). Most electric hand irons used by conservators today are not precision tools: they lack steadiness in heat transfer, as they are regulated by thermostatic on-off mechanisms that deliver only an average set temperature, which in actuality is a fluctuating series of over- and undershoots that trigger the on-off function. Variance as high as ±15^o^ C has been observed on hand irons ([fig. 37.1](#fig-37-1)).
+The execution of traditional flour-paste or wax-resin linings requires elevated and sustained heat transfer. Historically, it was performed with thermally uncontrolled methods such as hot sand or water bags, flat irons, or self-heating box irons, which relied on the reliner to monitor and regulate the temperature by touch. The introduction of electric irons in the early twentieth century led to their adoption for relining treatments, and they continue to be among methods employed to the present day ({% cite 'Bomford et al. 2003' '31' %}). Most electric hand irons used by conservators today are not precision tools: they lack steadiness in heat transfer, as they are regulated by thermostatic on-off mechanisms that deliver only an average set temperature, which in actuality is a fluctuating series of over- and undershoots that trigger the on-off function. Variance as high as ±1<sup>o</sup> C has been observed on hand irons ([fig. 37.1](#fig-37-1)).
 
 {% figure 'fig-37-1' %}
 
