--- a/content/7-modern-contemporary/39.md
+++ b/content/7-modern-contemporary/39.md
@@ -191,7 +191,7 @@ All trials involved the following procedure with adjustments for specific variab
 
 {% endbackmatter %}
 
-[^1]: It is assumed that “superficial cleaning” refers to dirt removal. Keck’s treatment report says the painting was varnished but does not say with what. At the time they were treating *Pitcher*, the Kecks were also treating a Picasso from the de Menils, which *is* documented as receiving a poly butyl methacrylate lining in the same treatment report as Braque’s *Pitcher* (Caroline Keck, letter in the conservation file, March 13, 1961). Sample T 703 s14 taken from a scraping in the varnish atop a yellow band in the background near the top center exhibited a spectrum, that, through spectral subtraction, indicated that a butyl methacrylate-containing species could be present. Attenuated total reflectance (ATR) Fourier transform infrared (FTIR) spectra were collected by C. E. Rogge using a Lumos FTIR microscope equipped with a motorized germanium ATR crystal with a 100 μm tip (Bruker). The spectra are an average of 64 scans at 4 cm^−1^ spectral resolution, and an ATR correction was automatically applied by the Opus 7.0 instrument control and data collection software.
+[^1]: It is assumed that “superficial cleaning” refers to dirt removal. Keck’s treatment report says the painting was varnished but does not say with what. At the time they were treating *Pitcher*, the Kecks were also treating a Picasso from the de Menils, which *is* documented as receiving a poly butyl methacrylate lining in the same treatment report as Braque’s *Pitcher* (Caroline Keck, letter in the conservation file, March 13, 1961). Sample T 703 s14 taken from a scraping in the varnish atop a yellow band in the background near the top center exhibited a spectrum, that, through spectral subtraction, indicated that a butyl methacrylate-containing species could be present. Attenuated total reflectance (ATR) Fourier transform infrared (FTIR) spectra were collected by C. E. Rogge using a Lumos FTIR microscope equipped with a motorized germanium ATR crystal with a 100 μm tip (Bruker). The spectra are an average of 64 scans at 4 c<sup>−1</sup> spectral resolution, and an ATR correction was automatically applied by the Opus 7.0 instrument control and data collection software.
 
 [^2]: Caroline Keck, letter to Mrs. De Menil in the conservation file, February 9, 1961.
 
@@ -209,7 +209,7 @@ All trials involved the following procedure with adjustments for specific variab
 
 [^9]: FTIR data were collected by C. E. Rogge on June 23, 2020, with the same instrumental parameters given in note 1.
 
-[^10]: Corina Rogge, FTIR spectroscopy results, June 23, 2020: “The background absorbance in the 1100-900 cm^−1^ range is higher in this portion of the sample suggesting additional materials are present, but the low amounts, weak signal and lack of characteristic peaks preclude identification.”
+[^10]: Corina Rogge, FTIR spectroscopy results, June 23, 2020: “The background absorbance in the 1100-900 c<sup>−1</sup> range is higher in this portion of the sample suggesting additional materials are present, but the low amounts, weak signal and lack of characteristic peaks preclude identification.”
 
 [^11]: Percentage of weight loss was calculated by dividing the difference of the painting’s weight before and after treatment by its weight before treatment and multiplying by 100.
 
