--- a/content/8-posters/47.md
+++ b/content/8-posters/47.md
@@ -27,7 +27,7 @@ The sensitivity of approach demonstrated by these two important figures for nume
 
 My experience in the field of structural conservation of canvas paintings has allowed me to test and use a system[^2] to mitigate the problem of variation in tension of canvases undergoing restoration, with significant results. This innovation aims to maintain the painting under a constant tension during all of the phases of treatment and to transfer the degree of tension that is initially established for the temporary stretcher to the definitive one, thereby avoiding the potentially damaging “accordion” effect.
 
-The system is extremely versatile in that it is applicable to paintings undergoing either only consolidation or a full lining, and hinges on the use of specially designed perimeter strips. Each strip is composed of two polyester canvas layers: the first, a lightweight polyester that comes in contact with the original painting (Origam 254, 18 g/m^2^), and the second, a heavier polyester (Trevira C.S. Ispra, 130 g/m^2^). Each is frayed[^3] for about 10 mm along the longer edge. The individual strips, thus prepared, are then paired in a staggered manner, longitudinally, with Beva film between them. They are then inserted in a vacuum envelope, and the adhesive is reactivated by heating it to 80°C, a measure aimed at ensuring a particularly solid bond[^4] ([fig. 47.1](#fig-47-1)).
+The system is extremely versatile in that it is applicable to paintings undergoing either only consolidation or a full lining, and hinges on the use of specially designed perimeter strips. Each strip is composed of two polyester canvas layers: the first, a lightweight polyester that comes in contact with the original painting (Origam 254, 18 g/<sup>2</sup>), and the second, a heavier polyester (Trevira C.S. Ispra, 130 g/<sup>2</sup>). Each is frayed[^3] for about 10 mm along the longer edge. The individual strips, thus prepared, are then paired in a staggered manner, longitudinally, with Beva film between them. They are then inserted in a vacuum envelope, and the adhesive is reactivated by heating it to 80°C, a measure aimed at ensuring a particularly solid bond[^4] ([fig. 47.1](#fig-47-1)).
 
 {% figure 'fig-47-1' %}
 
