--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -46,7 +46,7 @@ This poster presents the results of the case study of applying an AEROSIL and mi
 
 ## Materials
 
-AEROSIL is a trade name of a line of fumed silica (SiO~2~) products produced by the German chemical company Evonik Industries. It is a pure, very fine powder with a specific surface area of 50 m^2^/g or more. AEROSIL is synthesized during flame hydrolysis (T \>1000°C) of silicon tetrachloride (SiCl~4~) by the following reaction:
+AEROSIL is a trade name of a line of fumed silica (SiO~2~) products produced by the German chemical company Evonik Industries. It is a pure, very fine powder with a specific surface area of 50 <sup>2</sup>/g or more. AEROSIL is synthesized during flame hydrolysis (T \>1000°C) of silicon tetrachloride (SiCl~4~) by the following reaction:
 
 SiCl~4~ + 2H~2~ + O~2~ = SiO~2~ + 4HCl
 
