--- a/content/8-posters/49.md
+++ b/content/8-posters/49.md
@@ -59,7 +59,7 @@ Experiment 1, Dwell Time, assessed the efficacy of Evolon CR left on the surface
 
 ## Single- vs. Double-Layer Application
 
-Experiment 2*,* Single- vs. Double-Layer Application, assessed the difference between applying a single square of Evolon CR versus a two-layer system (a single wetted square under a dry square covered with Mylar). This method was investigated to determine whether layering a dry tissue over a solvent-soaked Evolon CR tissue could increase the poulticing ability of the material. Both the Single-Layer and Double-Layer experiments were run in triplicate with a five-minute dwell time.
+Experiment 2, Single- vs. Double-Layer Application, assessed the difference between applying a single square of Evolon CR versus a two-layer system (a single wetted square under a dry square covered with Mylar). This method was investigated to determine whether layering a dry tissue over a solvent-soaked Evolon CR tissue could increase the poulticing ability of the material. Both the Single-Layer and Double-Layer experiments were run in triplicate with a five-minute dwell time.
 
 ## Iterative Use
 
@@ -109,7 +109,7 @@ SEM images ([figs. 49.4a](#fig-49-4-a), [b](#fig-49-4-b), [c](#fig-49-4-c), and 
 
 {% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' %}
 
-BET analysis yielded a surprising result ([fig. 49.5](#fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 m^2^/g (unused control) to 0.4315 m^2^/g (after single use). Contrary to the weight gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
+BET analysis yielded a surprising result ([fig. 49.5](#fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 <sup>2</sup>/g (unused control) to 0.4315 <sup>2</sup>/g (after single use). Contrary to the weight gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
 
 {% figure 'fig-49-5' %}
 
