--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -58,13 +58,13 @@ Before the artificial aging, it was revealed that the larger the amount of resin
 
 After the artificial aging, the removal rate of wax resin decreased for all the samples except F, which contained no resin. Comparing the samples in terms of the amount of resin, after the aging the removal rate of B, with the doubled dammar resin, became smaller than that of A, whereas the opposite results were obtained before the aging. It was also revealed that it became so difficult to remove C and E, which contain more resins than A; more than 80% of the impregnated wax resin by weight remained on the pieces after removal. As for F, its removal rate didn’t change much after the aging. Accordingly, a rough tendency could be summarized as follows: the greater the amount of resin in the wax-resin adhesive, the greater the removal rate of wax resin would be before the aging. Conversely, the more resin there was in the recipe, the less the removal rate would be after the aging.
 
-For the next step, what was left on the test pieces after removal was investigated by Fourier-transform infrared spectroscopy. The FT-IR spectra of wax-resin residues both before and after the removal were measured by using Bruker Alpha FT-IR spectrometer with attenuated total reflection (ATR) mode. To compare each spectrum, we focused on the range of wave numbers from 1800 to 1600 cm^−1^. Beeswax has its highest peak at about 1736 cm^−1^, and resins have peaks at around 1700 cm^−1^. The spectra of all the components are shown in [fig. 50.3](#fig-50-3), and the spectra of mixtures (A–E) are shown in [fig. 50.4](#fig-50-4).
+For the next step, what was left on the test pieces after removal was investigated by Fourier-transform infrared spectroscopy. The FT-IR spectra of wax-resin residues both before and after the removal were measured by using Bruker Alpha FT-IR spectrometer with attenuated total reflection (ATR) mode. To compare each spectrum, we focused on the range of wave numbers from 1800 to 1600 c<sup>−1</sup>. Beeswax has its highest peak at about 1736 c<sup>−1</sup>, and resins have peaks at around 1700 c<sup>−1</sup>. The spectra of all the components are shown in [fig. 50.3](#fig-50-3), and the spectra of mixtures (A–E) are shown in [fig. 50.4](#fig-50-4).
 
 {% figure 'fig-50-3' %}
 
 {% figure 'fig-50-4' %}
 
-As the spectrum of wax resin A before aging shows, its peak intensity became weaker at about 1735 cm^−1^ and a little stronger at about 1710 cm^−1^ by the removal. This implies that the spectrum gradually gets more similar to that of a resins than that of beeswax. These changes of spectra were common to almost all the mixtures (A–E). These results suggest that beeswax tends to be removed better than resins. The spectra after the aging showed similar changes by the removal as those observed before the aging.
+As the spectrum of wax resin A before aging shows, its peak intensity became weaker at about 1735 c<sup>−1</sup> and a little stronger at about 1710 c<sup>−1</sup> by the removal. This implies that the spectrum gradually gets more similar to that of a resins than that of beeswax. These changes of spectra were common to almost all the mixtures (A–E). These results suggest that beeswax tends to be removed better than resins. The spectra after the aging showed similar changes by the removal as those observed before the aging.
 
 ## Discussion of Experimental Results
 
