--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -89,7 +89,7 @@ Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly
 
 {% figure 'fig-53-4' %}
 
-The activation of the adhesive bonding the lining canvas to the interleaf and the interleaf to the original support was done in situ. The dry adhesive was reactivated using solvent vapors: xylene and ethanol (30:70). Cheesecloth was chosen as a carrier for the vapors due to its ability to absorb polar solvents easily. The solvent delivery cloth measured slightly larger than the surface area of the applied adhesive. The cloth was rolled into a tight bundle and wrapped with cling film (Saran wrap). A precalculated amount of solvent was then injected (75–80 ml per m^2^), and the roll was clamped for several hours to guarantee an even distribution of the solvents within the roll. At that point, the roll was unwrapped and placed quickly (to reduce evaporation loss) on top of the prepositioned, lining canvas. A string was attached to each corner of the solvent delivery cloth before it was folded, rolled, and wrapped to help speed distribution over the reverse.
+The activation of the adhesive bonding the lining canvas to the interleaf and the interleaf to the original support was done in situ. The dry adhesive was reactivated using solvent vapors: xylene and ethanol (30:70). Cheesecloth was chosen as a carrier for the vapors due to its ability to absorb polar solvents easily. The solvent delivery cloth measured slightly larger than the surface area of the applied adhesive. The cloth was rolled into a tight bundle and wrapped with cling film (Saran wrap). A precalculated amount of solvent was then injected (75–80 ml per <sup>2</sup>), and the roll was clamped for several hours to guarantee an even distribution of the solvents within the roll. At that point, the roll was unwrapped and placed quickly (to reduce evaporation loss) on top of the prepositioned, lining canvas. A string was attached to each corner of the solvent delivery cloth before it was folded, rolled, and wrapped to help speed distribution over the reverse.
 
 To ensure the tightest possible contact between lining fabric and cheesecloth, the green foil was re-positioned and the motor activated (50 mbar). After approximately 20 minutes, the motor was deactivated and the cheesecloth replaced with a heavy woolen fabric to absorb any excess solvent vapors present within the envelope, thus accelerating the bonding process. The package was then recovered with the green foil, and the motor was reactivated (110 mbar) (figure 54.5). After about two hours the motor was switched off and the upper foil was removed to allow the remaining solvent vapors to evaporate.[^11]
 
