--- a/content/8-posters/56.md
+++ b/content/8-posters/56.md
@@ -35,7 +35,7 @@ which protects the canvas from many of the mechanical stresses banners are subje
 
 ## Materials and Technique
 
-Twenty-five different painted liturgical textiles were studied; they are constructed of a variety of materials (see [fig. 56.1](#fig-56-1)). The horizontal wooden top poles are occasionally polychromed and have profiled bulbs mounted on their ends. The textile supports are either a single piece of plain-weave linen or hemp or composed of two different pieces of the same fabric, sewn together along the vertical axis of the banner. In addition, there may be a variety of ornamental accessories such as lappets, fringes, tassels, textile ribbons, and braids. Generally, in case of the banners, the canvas surface is entirely covered with paint. In rare cases in the epitaphs*,* the fabric is only partly painted. Metal leaf is used for gilding halos and the painted frames that structure the composition.
+Twenty-five different painted liturgical textiles were studied; they are constructed of a variety of materials (see [fig. 56.1](#fig-56-1)). The horizontal wooden top poles are occasionally polychromed and have profiled bulbs mounted on their ends. The textile supports are either a single piece of plain-weave linen or hemp or composed of two different pieces of the same fabric, sewn together along the vertical axis of the banner. In addition, there may be a variety of ornamental accessories such as lappets, fringes, tassels, textile ribbons, and braids. Generally, in case of the banners, the canvas surface is entirely covered with paint. In rare cases in the epitaphs, the fabric is only partly painted. Metal leaf is used for gilding halos and the painted frames that structure the composition.
 
 In most examples, with rare exceptions, the canvas supports carry a sizing and/or a ground layer of different thickness and layer structure all over the canvas surface. However, sometimes the ground only covers the rectangle corresponding to the central image of the composition and not the lappets of banners. The layering of paint strata is simple thinly applied on heterogenous ground layers,[^3] using the pigments available at the time, which provided a generally matte surface finish.
 
@@ -53,7 +53,7 @@ The itinerant purpose of painted banners and epitaphs for ecclesiastical display
 
 Digital photography and portable handheld digital microscopy with ultraviolet, visible, and infrared spectra illumination were used to document the objects. A consistent number of microsamples was collected for technical examination purposes, generating large quantities of data that is still being studied.
 
-The samples were observed with light microscopy under high magnification with a Zeiss Axio Imager.A1m and Olympus BX51 microscopes, and some samples were analyzed using scanning electron microscopy– energy dispersive X-ray analysis (SEM-EDX)[^5] to provide more in-depth information on the surface of the samples and the presence of various specific elements in different strata. Three banners were inspected using a noninvasive, portable X-ray fluorescence (XRF) spectrometer.[^6] More insight into the samples’ crystalline nature came to light using X-ray powder diffraction (XRD) examination. The identity of some pigments and media were confirmed by analysis of the samples using micro-Raman spectroscopy,[^7] the Olympus BX-51 microscope and attenuated total reflectance–Fourier-transform infrared spectroscopy (ATR-FTIR-).[^8] Canvas threads were investigated with ATR-FTIR using a portable Alpha spectrometer from Bruker Optics equipped with an ALPHA Platinum ATR module. Spectra were recorded in the 4000–650 cm^−1^ spectral range with a 4 cm^−1^ resolution, using 32 scans ([fig. 56.2](#fig-56-2); see [table 56.2](#table-56-2)). The data from samples of the referred objects were compared with measurements taken on a sample of painted canvas, cloth glued over the face of the joint, from a painted wooden church from Curtea, dated 1806, to confirm that painters of wooden churches used similar materials—canvas and ground layer composition—to paint banners.
+The samples were observed with light microscopy under high magnification with a Zeiss Axio Imager.A1m and Olympus BX51 microscopes, and some samples were analyzed using scanning electron microscopy– energy dispersive X-ray analysis (SEM-EDX)[^5] to provide more in-depth information on the surface of the samples and the presence of various specific elements in different strata. Three banners were inspected using a noninvasive, portable X-ray fluorescence (XRF) spectrometer.[^6] More insight into the samples’ crystalline nature came to light using X-ray powder diffraction (XRD) examination. The identity of some pigments and media were confirmed by analysis of the samples using micro-Raman spectroscopy,[^7] the Olympus BX-51 microscope and attenuated total reflectance–Fourier-transform infrared spectroscopy (ATR-FTIR-).[^8] Canvas threads were investigated with ATR-FTIR using a portable Alpha spectrometer from Bruker Optics equipped with an ALPHA Platinum ATR module. Spectra were recorded in the 4000–650 c<sup>−1</sup> spectral range with a 4 c<sup>−1</sup> resolution, using 32 scans ([fig. 56.2](#fig-56-2); see [table 56.2](#table-56-2)). The data from samples of the referred objects were compared with measurements taken on a sample of painted canvas, cloth glued over the face of the joint, from a painted wooden church from Curtea, dated 1806, to confirm that painters of wooden churches used similar materials—canvas and ground layer composition—to paint banners.
 
 {% figure 'fig-56-2' %}
 
