--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -93,15 +93,15 @@ Fourteen different pigment and filler combinations were identified. The most fre
 
 The four oil-primed samples were double primed. Three were oil over acrylic or acrylic-PVA, and one contained two oil layers. Barium sulfate, titanium white, and calcium carbonate were found in oil primings. Additionally, zinc was detected in three of the oil- primed samples, and zinc soaps (amorphous and/or crystalline) were detected at the surface of these samples.
 
-Amorphous zinc carboxylates (broadband centered 1571 cm^−1^) were found at the top surface of the double oil priming where zinc oxide was present only in the underlayer. This suggests in situ formation of zinc soaps and migration from the lower layer to the surface ([fig. 62.3a](#fig-62-3)).
+Amorphous zinc carboxylates (broadband centered 1571 c<sup>−1</sup>) were found at the top surface of the double oil priming where zinc oxide was present only in the underlayer. This suggests in situ formation of zinc soaps and migration from the lower layer to the surface ([fig. 62.3a](#fig-62-3)).
 
-Crystalline zinc soaps (1538 cm^−1^) were detected at the surface of two oil-primed canvases with acrylic-PVA underlayers. The oil priming contained no zinc oxide, and thus zinc stearate was likely a constituent in the priming formulation ([fig. 62.3b](#fig-62-3)). These results are important, as zinc soaps at the surface of oil-primed canvases may pose a risk to subsequent oil-paint adhesion ({% cite 'Osmond 2019' %}).
+Crystalline zinc soaps (1538 c<sup>−1</sup>) were detected at the surface of two oil-primed canvases with acrylic-PVA underlayers. The oil priming contained no zinc oxide, and thus zinc stearate was likely a constituent in the priming formulation ([fig. 62.3b](#fig-62-3)). These results are important, as zinc soaps at the surface of oil-primed canvases may pose a risk to subsequent oil-paint adhesion ({% cite 'Osmond 2019' %}).
 
 ## Canvas
 
 Fiber analysis showed good correlation with the information provided by manufacturers. Cotton was the most prevalent fiber, followed by linen. Polythene terephthalate (PET) and PET-cotton blends were less common ([table 62.1](#table-62-1)).
 
-Three weave patterns were identified: plain weave (1 x 1), half basket (2 x 1), and full basket (2 x 2) ([table 62.1](#table-62-1)). Cotton was typically found as half basket, while linen, PET, and PET-cotton blends were mostly plain weave. Twenty-five percent of cotton samples had a thread count of 10 x 30 threads/cm^2^; otherwise, thread counts varied.
+Three weave patterns were identified: plain weave (1 x 1), half basket (2 x 1), and full basket (2 x 2) ([table 62.1](#table-62-1)). Cotton was typically found as half basket, while linen, PET, and PET-cotton blends were mostly plain weave. Twenty-five percent of cotton samples had a thread count of 10 x 30 threads/c<sup>2</sup>; otherwise, thread counts varied.
 
 Uniaxial tensile strength testing of canvas samples indicated that the type or number of priming layers did not significantly affect tensile strength. The force at maximum for cotton and cotton-PET (56—258 N) was generally lower than for linen and PET (191—514 N) regardless of priming layers. The modulus of elasticity of the samples varied, generally showing a lower modulus of elasticity in the warp direction than the weft, aligning with research by others ({% cite 'Young and Jardine 2012' %}).
 
@@ -129,7 +129,7 @@ The project was carried out as part of the memorandum of understanding between Q
 
 ## Experimental Equipment and Conditions
 
-ATR-FTIR: Thermo Scientific Nicolet iN10 microscope with DTGS room-temperature detector coupled to an iZ10 diamond ATR bench accessory; 16 scans over 4000–400 cm^−1^ range, 4 cm^−1^ resolution.
+ATR-FTIR: Thermo Scientific Nicolet iN10 microscope with DTGS room-temperature detector coupled to an iZ10 diamond ATR bench accessory; 16 scans over 4000–400 c<sup>−1</sup> range, 4 c<sup>−1</sup> resolution.
 
 Py-GCMS: Shimadzu GCMS QP2020 combined with a Frontier PY3030D pyrolizer unit with autosampler AOC-20i. Pyrolysis conditions: 600°C for 0.2 minutes. Gas chromatography conditions: 40°C for 5 minutes, ramped to 300°C at 10°C/min., hold 5 minutes. Oil-containing samples were derivatized with 3 µl of 25% tetramethylammonium hydroxide (TMAH) in methanol. Mass spectrometry conditions: Electronic index (EI) mode (70 eV), scan range: 50–600 m/z.
 
